// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    addAllFavorites={[Function]}
    history={
        Object {
            "push": [Function],
          }
    }
    loginUser={[Function]}
    updateMovies={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="page-title"
>
          WELCOME BACK
</h1>,
        <form
          className="login-form"
          onSubmit={[Function]}
>
          <div
                    className="input-container"
          >
                    <input
                              className="login-input"
                              name="email"
                              onChange={[Function]}
                              placeholder="email"
                              type="text"
                              value=""
                    />
                    <input
                              className="login-input"
                              name="password"
                              onChange={[Function]}
                              placeholder="password"
                              type="text"
                              value=""
                    />
                    <button
                              className="login-button"
                    >
                              ENTER
                    </button>
          </div>
</form>,
        false,
      ],
      "className": "login",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "WELCOME BACK",
          "className": "page-title",
        },
        "ref": null,
        "rendered": "WELCOME BACK",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="input-container"
>
            <input
                        className="login-input"
                        name="email"
                        onChange={[Function]}
                        placeholder="email"
                        type="text"
                        value=""
            />
            <input
                        className="login-input"
                        name="password"
                        onChange={[Function]}
                        placeholder="password"
                        type="text"
                        value=""
            />
            <button
                        className="login-button"
            >
                        ENTER
            </button>
</div>,
          "className": "login-form",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="login-input"
                name="email"
                onChange={[Function]}
                placeholder="email"
                type="text"
                value=""
/>,
              <input
                className="login-input"
                name="password"
                onChange={[Function]}
                placeholder="password"
                type="text"
                value=""
/>,
              <button
                className="login-button"
>
                ENTER
</button>,
            ],
            "className": "input-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "login-input",
                "name": "email",
                "onChange": [Function],
                "placeholder": "email",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "login-input",
                "name": "password",
                "onChange": [Function],
                "placeholder": "password",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "ENTER",
                "className": "login-button",
              },
              "ref": null,
              "rendered": "ENTER",
              "type": "button",
            },
          ],
          "type": "div",
        },
        "type": "form",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-title"
>
            WELCOME BACK
</h1>,
          <form
            className="login-form"
            onSubmit={[Function]}
>
            <div
                        className="input-container"
            >
                        <input
                                    className="login-input"
                                    name="email"
                                    onChange={[Function]}
                                    placeholder="email"
                                    type="text"
                                    value=""
                        />
                        <input
                                    className="login-input"
                                    name="password"
                                    onChange={[Function]}
                                    placeholder="password"
                                    type="text"
                                    value=""
                        />
                        <button
                                    className="login-button"
                        >
                                    ENTER
                        </button>
            </div>
</form>,
          false,
        ],
        "className": "login",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "WELCOME BACK",
            "className": "page-title",
          },
          "ref": null,
          "rendered": "WELCOME BACK",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="input-container"
>
              <input
                            className="login-input"
                            name="email"
                            onChange={[Function]}
                            placeholder="email"
                            type="text"
                            value=""
              />
              <input
                            className="login-input"
                            name="password"
                            onChange={[Function]}
                            placeholder="password"
                            type="text"
                            value=""
              />
              <button
                            className="login-button"
              >
                            ENTER
              </button>
</div>,
            "className": "login-form",
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="login-input"
                  name="email"
                  onChange={[Function]}
                  placeholder="email"
                  type="text"
                  value=""
/>,
                <input
                  className="login-input"
                  name="password"
                  onChange={[Function]}
                  placeholder="password"
                  type="text"
                  value=""
/>,
                <button
                  className="login-button"
>
                  ENTER
</button>,
              ],
              "className": "input-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "login-input",
                  "name": "email",
                  "onChange": [Function],
                  "placeholder": "email",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "login-input",
                  "name": "password",
                  "onChange": [Function],
                  "placeholder": "password",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "ENTER",
                  "className": "login-button",
                },
                "ref": null,
                "rendered": "ENTER",
                "type": "button",
              },
            ],
            "type": "div",
          },
          "type": "form",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Login should match snapshot when rendering alert 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    addAllFavorites={[Function]}
    history={
        Object {
            "push": [Function],
          }
    }
    loginUser={[Function]}
    updateMovies={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="page-title"
>
          WELCOME BACK
</h1>,
        <form
          className="login-form"
          onSubmit={[Function]}
>
          <div
                    className="input-container"
          >
                    <input
                              className="login-input"
                              name="email"
                              onChange={[Function]}
                              placeholder="email"
                              type="text"
                              value=""
                    />
                    <input
                              className="login-input"
                              name="password"
                              onChange={[Function]}
                              placeholder="password"
                              type="text"
                              value=""
                    />
                    <button
                              className="login-button"
                    >
                              ENTER
                    </button>
          </div>
</form>,
        <p>
          Could not find your account
</p>,
      ],
      "className": "login",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "WELCOME BACK",
          "className": "page-title",
        },
        "ref": null,
        "rendered": "WELCOME BACK",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="input-container"
>
            <input
                        className="login-input"
                        name="email"
                        onChange={[Function]}
                        placeholder="email"
                        type="text"
                        value=""
            />
            <input
                        className="login-input"
                        name="password"
                        onChange={[Function]}
                        placeholder="password"
                        type="text"
                        value=""
            />
            <button
                        className="login-button"
            >
                        ENTER
            </button>
</div>,
          "className": "login-form",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="login-input"
                name="email"
                onChange={[Function]}
                placeholder="email"
                type="text"
                value=""
/>,
              <input
                className="login-input"
                name="password"
                onChange={[Function]}
                placeholder="password"
                type="text"
                value=""
/>,
              <button
                className="login-button"
>
                ENTER
</button>,
            ],
            "className": "input-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "login-input",
                "name": "email",
                "onChange": [Function],
                "placeholder": "email",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "login-input",
                "name": "password",
                "onChange": [Function],
                "placeholder": "password",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "ENTER",
                "className": "login-button",
              },
              "ref": null,
              "rendered": "ENTER",
              "type": "button",
            },
          ],
          "type": "div",
        },
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Could not find your account",
        },
        "ref": null,
        "rendered": "Could not find your account",
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-title"
>
            WELCOME BACK
</h1>,
          <form
            className="login-form"
            onSubmit={[Function]}
>
            <div
                        className="input-container"
            >
                        <input
                                    className="login-input"
                                    name="email"
                                    onChange={[Function]}
                                    placeholder="email"
                                    type="text"
                                    value=""
                        />
                        <input
                                    className="login-input"
                                    name="password"
                                    onChange={[Function]}
                                    placeholder="password"
                                    type="text"
                                    value=""
                        />
                        <button
                                    className="login-button"
                        >
                                    ENTER
                        </button>
            </div>
</form>,
          <p>
            Could not find your account
</p>,
        ],
        "className": "login",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "WELCOME BACK",
            "className": "page-title",
          },
          "ref": null,
          "rendered": "WELCOME BACK",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="input-container"
>
              <input
                            className="login-input"
                            name="email"
                            onChange={[Function]}
                            placeholder="email"
                            type="text"
                            value=""
              />
              <input
                            className="login-input"
                            name="password"
                            onChange={[Function]}
                            placeholder="password"
                            type="text"
                            value=""
              />
              <button
                            className="login-button"
              >
                            ENTER
              </button>
</div>,
            "className": "login-form",
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="login-input"
                  name="email"
                  onChange={[Function]}
                  placeholder="email"
                  type="text"
                  value=""
/>,
                <input
                  className="login-input"
                  name="password"
                  onChange={[Function]}
                  placeholder="password"
                  type="text"
                  value=""
/>,
                <button
                  className="login-button"
>
                  ENTER
</button>,
              ],
              "className": "input-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "login-input",
                  "name": "email",
                  "onChange": [Function],
                  "placeholder": "email",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "login-input",
                  "name": "password",
                  "onChange": [Function],
                  "placeholder": "password",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "ENTER",
                  "className": "login-button",
                },
                "ref": null,
                "rendered": "ENTER",
                "type": "button",
              },
            ],
            "type": "div",
          },
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Could not find your account",
          },
          "ref": null,
          "rendered": "Could not find your account",
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
